chore: add typescript

--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "node": "16.x",
     "npm": "8.x"
   },
-  "scripts": {},
+  "scripts": {
+    "dev:server": "tsnd --transpile-only --ignore-watch node_modules src/server"
+  },
   "devDependencies": {
-    "git-commit-msg-linter": "^4.1.1"
+    "git-commit-msg-linter": "^4.1.1",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.2"
   }
 }
