--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "npm": "8.x"
   },
   "scripts": {
-    "dev:server": "tsnd --transpile-only --ignore-watch node_modules src/server"
+    "dev:server": "tsnd --transpile-only --ignore-watch node_modules src/server",
+    "test": "jest --passWithNoTests --noStackTrace --runInBand",
+    "test:watch": "npm run test -- --watch",
+    "test:ci": "npm run test -- --coverage"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -31,6 +34,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/jest": "^27.4.1",
     "@types/morgan": "^1.9.3",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
@@ -43,7 +47,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.2.0",
     "git-commit-msg-linter": "^4.1.1",
+    "jest": "^27.5.1",
     "prettier": "^2.5.1",
+    "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2"
   }
