--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "scripts": {
     "dev:server": "tsnd --transpile-only --ignore-watch node_modules src/server",
+    "prepare": "husky install",
     "test": "jest --passWithNoTests --noStackTrace --runInBand",
     "test:watch": "npm run test -- --watch",
     "test:ci": "npm run test -- --coverage"
@@ -47,10 +48,17 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-promise": "^5.2.0",
     "git-commit-msg-linter": "^4.1.1",
+    "husky": "^7.0.4",
     "jest": "^27.5.1",
+    "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
     "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint 'src/**' --fix --no-error-on-unmatched-pattern"
+    ]
   }
 }
