chore: add typeorm

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,15 @@
 # General
 PORT=3000
 NODE_ENV=development
+
+# TypeORM
+TYPEORM_CONNECTION=postgres
+TYPEORM_HOST=
+TYPEORM_USERNAME=
+TYPEORM_PASSWORD=
+TYPEORM_DATABASE=invoices
+TYPEORM_PORT=5432
+TYPEORM_ENTITIES=./src/database/entities/*.ts
+TYPEORM_MIGRATIONS=./src/database/migrations/*.ts
+TYPEORM_MIGRATIONS_DIR=./src/database/migrations
+TYPEORM_LOGGING=true
