--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "winston-daily-rotate-file": "^4.6.1"
   },
   "devDependencies": {
+    "@faker-js/faker": "^6.0.0-alpha.7",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
