--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,11 @@
 PORT=3000
 NODE_ENV=development
 
+# Redis
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASS=
+
 # TypeORM
 TYPEORM_CONNECTION=postgres
 TYPEORM_HOST=
