--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
     "helmet": "^5.0.2",
+    "joi": "^17.6.0",
     "morgan": "^1.10.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
