--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "typeorm": "ts-node --transpile-only node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "bullmq": "^1.76.1",
+    "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
