--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "bullmq": "^1.76.1",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
+    "dayjs": "^1.10.8",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
