--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "helmet": "^5.0.2",
     "joi": "^17.6.0",
     "morgan": "^1.10.0",
+    "pdfmake": "^0.1.72",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.6.0",
@@ -53,14 +54,15 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/morgan": "^1.9.3",
+    "@types/pdfmake": "^0.1.21",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.13.0",
     "concurrently": "^7.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.4.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.0.0",
